<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Camera Icon -->
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_camera"
                android:contentDescription="@string/lbl_camera_icon"
                android:layout_marginEnd="10dp"/>

            <!-- Camera Text -->
            <TextView
                android:id="@+id/text_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:textColor="#00FF00"
                android:text="@string/lbl_camera" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="#00FF00"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Gallery Icon -->
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_gallery"
                android:contentDescription="@string/lbl_gallery_icon"
                android:layout_marginEnd="10dp"/>

            <!-- Gallery Text -->
            <TextView
                android:id="@+id/text_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:textColor="#00FF00"
                android:text="@string/lbl_gallery" />

        </LinearLayout>
    </LinearLayout>
</layout>
