<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="howWorksVM" type="com.herbi.app.modules.howworks.data.viewmodel.HowWorksVM"/>
    </data>
    <LinearLayout android:id="@+id/linearHowWorks"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtSkip"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{howWorksVM.howWorksModel.txtSkip}"
            style="@style/txtNunitolight12" tools:text="@string/lbl_skip"/>
        <TextView android:gravity="start"
            android:id="@+id/txtHowHERBIWorks"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:text="@{howWorksVM.howWorksModel.txtHowHERBIWorks}"
            style="@style/txtMontserratromansemibold30" tools:text="@string/lbl_how_herbi_works"/>
        <LinearLayout android:id="@+id/linearColumnitsjustsimpl"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleteal_700cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtITSJUSTSIMPL"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{howWorksVM.howWorksModel.txtITSJUSTSIMPL}"
                style="@style/txtNunitosemibold16" tools:text="@string/msg_it_s_just_simpl"/>
            <FrameLayout android:id="@+id/frameStackcapture"
                android:layout_gravity="end"
                android:layout_height="@dimen/_104pxv"
                android:layout_marginEnd="@dimen/_98pxh"
                android:layout_marginStart="@dimen/_98pxh"
                android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_118pxh">
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtCAPTURE"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{howWorksVM.howWorksModel.txtCAPTURE}"
                    style="@style/txtNunitosemibold16" tools:text="@string/lbl_capture"/>
                <ImageView android:id="@+id/imageCaptureplantic"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_83pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_captureplantic}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_captureplantic"/>
            </FrameLayout>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:text="@{howWorksVM.howWorksModel.txtDescription}"
                style="@style/txtNunitoregular14" tools:text="@string/msg_capture_an_imag"/>
            <FrameLayout android:id="@+id/frameStackanalyzing"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_139pxv"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_29pxv" android:layout_width="@dimen/_203pxh">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtANALYZING"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_35pxv"
                    android:layout_marginEnd="@dimen/_56pxh"
                    android:layout_marginStart="@dimen/_56pxh"
                    android:layout_marginTop="@dimen/_35pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{howWorksVM.howWorksModel.txtANALYZING}"
                    style="@style/txtNunitosemibold16" tools:text="@string/lbl_analyzing"/>
                <TextView android:gravity="top|center"
                    android:id="@+id/txtWaitforafew"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:text="@{howWorksVM.howWorksModel.txtWaitforafew}"
                    style="@style/txtNunitoregular14" tools:text="@string/msg_wait_for_a_few"/>
                <ImageView android:id="@+id/imageAnalyzingLoadin"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_84pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_42pxh"
                    android:layout_marginStart="@dimen/_42pxh"
                    android:layout_width="@dimen/_118pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_analyzingloadin}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_analyzingloadin"/>
            </FrameLayout>
            <ImageView android:id="@+id/imageResultIcon"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_133pxh"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="@dimen/_130pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_resulticon}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_resulticon"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtHereyougoTh"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:text="@{howWorksVM.howWorksModel.txtHereyougoTh}"
                android:textAllCaps="true"
                style="@style/txtNunitosemibold15" tools:text="@string/msg_here_you_go_th"/>
        </LinearLayout>
    </LinearLayout>
</layout>
