<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="ampalayaFilVM" type="com.herbi.app.modules.ampalayafil.data.viewmodel.AmpalayaFilVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearAmpalayaFil"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <FrameLayout android:id="@+id/frameStackrectangleninety"
                android:layout_height="@dimen/_69pxv" android:layout_width="match_parent">
                <FrameLayout android:id="@+id/frameStackarrowleft"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_27pxv"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent" style="@style/groupStyleteal_700">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_12pxh"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_width="@dimen/_17pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                </FrameLayout>
                <View android:background="@color/white_A700"
                    android:id="@+id/viewRectangleNinety"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_33pxv"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_33pxh"
                    android:layout_marginStart="@dimen/_33pxh"
                    android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_37pxh"/>
                <ImageView android:id="@+id/imageRectangleNinetyOne"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_35pxh"
                    android:layout_marginEnd="@dimen/_34pxh"
                    android:layout_marginStart="@dimen/_34pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_35pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rectangle91"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle91"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtUnlockingtheH"
                    android:layout_gravity="top|end"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16pxh"
                    android:layout_marginVertical="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{ampalayaFilVM.ampalayaFilModel.txtUnlockingtheH}"
                    style="@style/txtNunitoitalicregular11" tools:text="@string/msg_unlocking_the_h"/>
                <ImageView android:id="@+id/imageLogog"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_35pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_width="@dimen/_35pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_logog"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logog"/>
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout android:id="@+id/frameStackmalunggay"
            android:layout_height="@dimen/_214pxv"
            android:layout_marginTop="@dimen/_1pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageMalunggay"
                android:layout_gravity="start"
                android:layout_height="@dimen/_177pxv"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY" cornerRadius="@{@dimen/_3pxh}"
                imageRes="@{@drawable/img_malunggay_3}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_malunggay_3"/>
            <LinearLayout android:id="@+id/linearColumnpangalannghal"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyleteal_701">
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtPangalanngHal"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_42pxh"
                    android:layout_marginStart="@dimen/_42pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:singleLine="true"
                    android:text="@{ampalayaFilVM.ampalayaFilModel.txtPangalanngHal}"
                    style="@style/txtNunitolight12_1" tools:text="@string/msg_pangalan_ng_hal"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowlanguage"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleteal_701">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_42pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:singleLine="true"
                    android:text="@{ampalayaFilVM.ampalayaFilModel.txtLanguage}"
                    style="@style/txtNunitoregular12" tools:text="@string/msg_aghan_na_pangal"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMommordicaChar"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{ampalayaFilVM.ampalayaFilModel.txtMommordicaChar}"
                    style="@style/txtNunitobold15" tools:text="@string/msg_mommordica_char"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAmpalaya"
                android:layout_gravity="top|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_102pxh"
                android:layout_marginStart="@dimen/_102pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{ampalayaFilVM.ampalayaFilModel.txtAmpalaya}"
                style="@style/txtNunitobold15" tools:text="@string/lbl_ampalaya2"/>
        </FrameLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtGroup607"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:paddingBottom="@dimen/_1pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_2pxv" android:singleLine="true"
            android:text="@{ampalayaFilVM.ampalayaFilModel.txtGroup607}"
            style="@style/txtSolidOutline_2" tools:text="@string/lbl_deskripsyon"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:text="@{ampalayaFilVM.ampalayaFilModel.txtDescription}"
            style="@style/txtNunitoregular11" tools:text="@string/msg_ang_ampalaya_o"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLanguageOne"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:paddingBottom="@dimen/_2pxv"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_1pxv" android:singleLine="true"
            android:text="@{ampalayaFilVM.ampalayaFilModel.txtLanguageOne}"
            style="@style/txtSolidOutline_1" tools:text="@string/msg_paggamit_sa_pag"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescriptionOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:text="@{ampalayaFilVM.ampalayaFilModel.txtDescriptionOne}"
            style="@style/txtNunitoregular11" tools:text="@string/msg_ang_ampalaya_ay"/>
    </LinearLayout>
</layout>
